- backout master map lookup changes made to beta3.
- change default master map from /etc/auto.master to auto.master
  so that we always use nsswitch to locate master map.
- change default installed master map to include "+auto.master"
  to pickup NIS master map.
- correct config names in default.c (jpro@bas.ac.uk).
- check base of offset mount tree is not a mount before umounting
  its offsets.

2/6/2006 autofs-5.0.0_beta4
---------------------------
- fix memory alloc error in nis lookup module.
- add "_" to "." mapname translation to nis lookup module.
- fix white space handling in replicated server selection code.
- merge don't strip debug info macro patch (Jeff Moyer).
- merge patch to add sanity checks on rmdir_path and unlink (Jeff Moyer).
- merge patch fix e2fsck error code check (Jeff Moyer).
- update hesiod module (Jeff Moyer).
  - add mutex to protect against overlapping mount requests.
  - update return from mount request to give more sensible NSS_*
    values.
- fix handling of autofs filesystem mount fail on init.
- add back test test for nested mount in program map lookup.
  - I must have commented this out for a reason. I guess we'll
    find out soon enough.
- fix "-hosts" map not finding entry for the "nobrowse" case.
- update man page with description of "-hosts" map type.
- complete logging, including per mount logging.
  - still needs some more work but that will need to wait.
- change init script to check for read on config file instead
  of execute.
- fix lookup of wildcard map entry for several map types.
- fix fail to realease cache read lock on indirect map expire.
- fix incorrect cache update of wildcard map entry.
- alter master map lookup semantics to be a little more like
  version 4. The way we should locate the master map needs
  more investigation and may change again.

23/5/2006 autofs-5.0.0_beta3
----------------------------
- add config and compile time info to output of -V.
- add "-Dvar=value" comand line option to define global