@@ -9,6 +9,8 @@
 - correct config names in default.c (jpro@bas.ac.uk).
 - check base of offset mount tree is not a mount before umounting
   its offsets.
+- fix replicated mount parse for case where last name in list
+  fails lookup.
 
 2/6/2006 autofs-5.0.0_beta4
 ---------------------------
